--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               "
             >
               <img
-                src="./img/portfolioimg1.png"
+                src="https://user-images.githubusercontent.com/79800224/127775722-d1c6af71-d941-447e-a193-6c0e9a36610b.png"
                 
                 alt=""
                 class="img-fluid portimg1"
