--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             >
               <div class="about-image d-flex justify-content-center align-items-center">
                 <img
-                  src="./img/portfolioimg2.png"
+                  src="https://user-images.githubusercontent.com/79800224/127775723-582022ec-e400-4746-bb9a-2733ee0074d4.png"
                   alt="about us"
                   class="img-fluid about"
                 />
