--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="single-brand  dflexc">
                     <div class="skillLogo">
-                    <img src="./img/photoshop.png" class="skillhw"  alt="">
+                    <img src="https://user-images.githubusercontent.com/79800224/127775720-0b176b44-8d2f-4b59-b0cb-ca6f2ccedafc.png" class="skillhw"  alt="">
                     </div>
                     <div class="skillText">
                     <h5>Photoshop</h5>
@@ -250,7 +250,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="single-brand  dflexc">
                     <div class="skillLogo">
-                    <img src="./img/illustrator.png" class="skillhw"  alt="">
+                    <img src="https://user-images.githubusercontent.com/79800224/127775730-8137a120-1286-48e7-bf9b-f159c02790b2.png" class="skillhw"  alt="">
                     </div>
                     <div class="skillText">
                     <h5>Illustrator</h5>
@@ -349,7 +349,7 @@
             <!-- section3 side 2  start of col 2-->
             <div class="col-xl-6 col-lg-12 p-5  col2imp dflexc section3side2 dontDisplaysm" >
               <div>
-                <img src="./img/skills.png"  alt="">
+                <img src="https://user-images.githubusercontent.com/79800224/127775725-6f2b211c-abb6-41da-b516-aeb633d12c7d.png"  alt="">
               </div>
             </div>
             <!-- end of section 3 side 2 -->
@@ -374,7 +374,7 @@
               
               <div class="col-lg-3 services col-md-6 col-sm-12">
                 <div class=" text-center py-4">
-                  <img src="./img/services/s1.png" alt="" />
+                  <img src="https://user-images.githubusercontent.com/79800224/127775704-dd118683-82f9-4b95-a847-a00e2fc4b27a.png" alt="" />
                 </div>
                 <div class="card-body text-center">
                   <h5 class="card-title text-uppercase font-roboto">
@@ -390,7 +390,7 @@
               <!-- start of card 2 -->
               <div class="col-lg-3 services col-md-6 col-sm-12">
                 <div class=" text-center py-4">
-                  <img src="./img/services/s2.png" alt="" />
+                  <img src="https://user-images.githubusercontent.com/79800224/127775705-fbc03526-cc8d-423c-bded-83cc359535ce.png" alt="" />
                 </div>
                 <div class="card-body text-center">
                   <h5 class="card-title text-uppercase font-roboto">
@@ -406,7 +406,7 @@
               <!-- start of card 3 -->
               <div class="col-lg-3 services col-md-6 col-sm-12">
                 <div class=" text-center py-4">
-                  <img src="./img/services/s3.png" alt="" />
+                  <img src="https://user-images.githubusercontent.com/79800224/127775706-344d0b57-66a4-4fc5-b488-ed6cd3ab2ad2.png" alt="" />
                 </div>
                 <div class="card-body text-center">
                   <h5 class="card-title text-uppercase font-roboto">
@@ -422,7 +422,7 @@
               <!-- start of card 4 -->
               <div class="col-lg-3 services col-md-6 col-sm-12">
                 <div class=" text-center py-4">
-                  <img src="./img/services/s4.png" alt="" />
+                  <img src="https://user-images.githubusercontent.com/79800224/127775703-9c95d2e6-9adc-4ac3-bea7-44a1a703af5b.png" alt="" />
                 </div>
                 <div class="card-body text-center">
                   <h5 class="card-title text-uppercase font-roboto">
@@ -459,8 +459,8 @@
             <div class="col-lg-4 col-md-6 col-sm-12 element-item">
               <div class="our-project">
                 <div class="img">
-                  <a class="test-popup-link" href="./img/projects/Screenshot (100).png">
-                    <img src="./img/projects/Screenshot (100).png" class="img-fluid projectImage" alt="">
+                  <a class="test-popup-link" href="https://user-images.githubusercontent.com/79800224/127775743-22ae92aa-50fe-418c-bd89-5034f2fa8761.png">
+                    <img src="https://user-images.githubusercontent.com/79800224/127775743-22ae92aa-50fe-418c-bd89-5034f2fa8761.png" class="img-fluid projectImage" alt="">
                   </a>
                   <div class="title py-4">
                     <h4 class="text-uppercase">Restaurant Website</h4>
@@ -475,8 +475,8 @@
             <div class="col-lg-4 col-md-6 col-sm-12 element-item Popular latest">
               <div class="our-project">
                 <div class="img">
-                  <a class="test-popup-link" href="./img/projects/Screenshot (101).png">
-                    <img src="./img/projects/Screenshot (101).png" class="img-fluid projectImage" alt="">
+                  <a class="test-popup-link" href="https://user-images.githubusercontent.com/79800224/127775736-4a1db7ac-e59d-4ea8-a668-29492746c938.png">
+                    <img src="https://user-images.githubusercontent.com/79800224/127775736-4a1db7ac-e59d-4ea8-a668-29492746c938.png" class="img-fluid projectImage" alt="">
                   </a>
                   <div class="title py-4">
                     <h4 class="text-uppercase">Tech Website</h4>
@@ -493,8 +493,8 @@
             <div class="col-lg-4 col-md-6 col-sm-12 element-item Popular latest">
               <div class="our-project">
                 <div class="img">
-                  <a class="test-popup-link" href="./img/projects/image_gallery.png">
-                    <img src="./img/projects/image_gallery.png" class="img-fluid projectImage" alt="">
+                  <a class="test-popup-link" href="https://user-images.githubusercontent.com/79800224/127775741-2ca1a8e2-2bde-4eac-aeeb-1874bfbcdefe.png">
+                    <img src="https://user-images.githubusercontent.com/79800224/127775741-2ca1a8e2-2bde-4eac-aeeb-1874bfbcdefe.png" class="img-fluid projectImage" alt="">
                   </a>
                   <div class="title py-4">
                     <h4 class="text-uppercase">Photographer Portfoli</h4>
@@ -509,8 +509,8 @@
             <div class="col-lg-4 col-md-6 col-sm-12 element-item following">
               <div class="our-project">
                 <div class="img">
-                  <a class="test-popup-link" href="./img/projects/signup_form.png">
-                    <img src="./img/projects/signup_form.png" class="img-fluid projectImage" alt="">
+                  <a class="test-popup-link" href="https://user-images.githubusercontent.com/79800224/127775739-9e0893f0-3ebe-476e-b612-1cd15ae5d665.png">
+                    <img src="https://user-images.githubusercontent.com/79800224/127775739-9e0893f0-3ebe-476e-b612-1cd15ae5d665.png" class="img-fluid projectImage" alt="">
                   </a>
                   <div class="title py-4">
                     <h4 class="text-uppercase">Sign Up Form</h4>
