--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
     <script src="./Vendor/isotop.min.js"></script>
 
     <!-- Magnific pop up -->
-    <script src="./Magnific-Popup-master/dist/jquery.magnific-popup.min.js"></script>
+    <script src="./JS/jquery.magnific-popup.min.js"></script>
 
     <!-- owl carousel js file -->
     <script src="./JS/owl.carousel.min.js"></script>
