--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./CSS/bootstrap.min.css" />
 
     <!-- maginfic pop up -->
-    <link rel="stylesheet" href="./Magnific-Popup-master/dist/magnific-popup.css">
+    <link rel="stylesheet" href="./CSS/magnific-popup.css">
 
     <!-- owl carousel css file -->
     <link rel="stylesheet" href="./Vendor/owl.carousel.min.css">
