--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                       Contact
                     </button>
                     </a>
-                    <a href="">
+                    <a href="https://github.com/saifkhan29/MyPortfolio/files/6912976/SaifKhan_InternshalaResume.1.pdf">
                     <button
                       type="button"
                       class="btn button secondary-button ms-4 text-uppercase"
@@ -196,7 +196,7 @@
                     I like to code things from scratch, and enjoy bringing ideas to life in the browser.
                   </p>
                 </div>
-                <a href="">
+                <a href="https://github.com/saifkhan29/MyPortfolio/files/6912976/SaifKhan_InternshalaResume.1.pdf">
                 <button
                   type="button"
                   class="btn button primary-button text-uppercase"
