--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                   </h5>
                   <p class="card-text text-secondary">
                     While building websites I also take care of SEO aspect and 
-                    code the website SEO
+                    code the website SEO friendly.
                   </p>
                 </div>
               </div>
