--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JZ80YYJQJF"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DF38JW3F9M"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-JZ80YYJQJF');
+  gtag('config', 'G-DF38JW3F9M');
 </script>
     
     <!-- Google Tag Manager -->
